# Chess_Engine

./: .gitignore  CMakeLists.txt  Makefile  analysis.txt  gmon.out  log.txt
Sharper/: log.txt
include/: attack_set.hpp  board.hpp  evaluate.hpp  make_unmake.hpp  move.hpp  search.hpp
src/: Makefile  attack_set.cpp  board.cpp  evaluate.cpp  main.cpp  make_unmake.cpp  move.cpp  search.cpp
test/: BoardConstructorTest.cpp  BoardTest.cpp  CMakeLists.txt  TestDetermineCheck.cpp  TestMakeMove.cpp  TestMoveGeneration.cpp  TestUnmake.cpp  tempCodeRunnerFile.cpp
